tests/resource/valid/collection/nested_set_builder.mamba
def x := [1, 2, 3]
def y := ["a", "b", "c"]

def xy := {{(l, m) | l in x, l > 0} | m in y, m != "c" }
